--- a/neuro_nuggets/templates/_navigation.html
+++ b/neuro_nuggets/templates/_navigation.html
@@ -6,7 +6,7 @@
     {% if current_user.is_authenticated %}
     <li><a href="{{ url_for('main.profile') }}">Profile</a></li>
     <li><a href="{{ url_for('auth.logout') }}">Logout</a></li>
-    <li><a href="{{ url_for('play.start_game') }}">Play</a></li>
+    <li><a href="{{ url_for('play.start_game') }}">Select Game Mode</a></li>
     {% endif %}
     {% if not current_user.is_authenticated %}
     <li><a href="{{ url_for('auth.login') }}">Login</a></li>
