--- a/neuro_nuggets/templates/pages/endless.html
+++ b/neuro_nuggets/templates/pages/endless.html
@@ -9,6 +9,8 @@
     var question = document.getElementById('question');
     var form = document.getElementById('form');
     var buttons = document.getElementsByClassName('answer_btn')
+    var scoreboard = document.getElementById('score');
+
 
     buttons.item(0).disabled = true
     buttons.item(1).disabled = true
@@ -16,6 +18,11 @@
     buttons.item(3).disabled = true
 
     var user_input = null
+
+    socket.on('score', function(score) {
+        console.log(score)
+        scoreboard.innerText = score
+    });
 
     socket.on('question', function(data) {
         console.log(data)
@@ -59,6 +66,10 @@
 {% endblock %}
 
 {% block content %}
+
+<div>
+    <h1 id="score">0</h1>
+</div>
 
 <div id="question">
 
