--- a/neuro_nuggets/templates/pages/profile.html
+++ b/neuro_nuggets/templates/pages/profile.html
@@ -4,4 +4,9 @@
 <h1 class="title">
   Welcome, {{ name }}!
 </h1>
+<form method="POST" >
+  <label for="username">Enter New Username</label>
+  <input type="text" name="username" id="username">
+  <input type="submit">
+</form>
 {% endblock %}
