--- a/neuro_nuggets/templates/pages/endless.html
+++ b/neuro_nuggets/templates/pages/endless.html
@@ -1,5 +1,11 @@
 {% extends "base.html" %}
 
+<head>
+<link rel="stylesheet" href="stylesht.css">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+</head>
+
 {% block script %}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js" integrity="sha512-q/dWJ3kcmjBLU4Qc47E4A9kTB4m3wuTY7vkFJDTZKjTs8jhyGQnaUrxa0Ytd0ssMZhbNua9hE+E7Qv1j+DyZwA==" crossorigin="anonymous"></script>
 <script type="text/javascript" charset="utf-8">
@@ -66,19 +72,26 @@
 {% endblock %}
 
 {% block content %}
+<div class="content">
 
-<div>
-    <h1 id="score">0</h1>
-</div>
-
-<div id="question">
-
+<p id="question_txt">how much balls on the sun</p>
+<div id="question" class="flex-container">
+    <ol>
+        <li id="question_ans1" class="ans">Kentucky is the state of this plce and it has ajksdfldjgkmntlf,</li>
+        <li id="question_ans2" class="ans">Kentucky is the state of this plce and it has ajksdfldjgkmntlf,</li>
+        <li id="question_ans3" class="ans">Kentucky is the state of this plce and it has ajksdfldjgkmntlf,</li>
+        <li id="question_ans4" class="ans">Kentucky is the state of this plce and it has ajksdfldjgkmntlf,</li>
+    </ol>
+    <h1 id="score">Score: 0</h1>
 </div>
 
 <form id="form">
-    <button class="answer_btn" id="btn1" type="submit" value="1">1</button>
-    <button class="answer_btn" id="btn2" type="submit" value="2">2</button>
-    <button class="answer_btn" id="btn3" type="submit" value="3">3</button>
-    <button class="answer_btn" id="btn4" type="submit" value="4">4</button>
+    <div class="buttons">
+        <button class="answer_btn" id="btn1" type="submit" value="1">1</button>
+        <button class="answer_btn" id="btn2" type="submit" value="2">2</button>
+        <button class="answer_btn" id="btn3" type="submit" value="3">3</button>
+        <button class="answer_btn" id="btn4" type="submit" value="4">4</button>
+    </div>
 </form>
+</div>
 {% endblock %}
