Fix login/signup page

--- a/neuro_nuggets/templates/pages/signup.html
+++ b/neuro_nuggets/templates/pages/signup.html
@@ -1,16 +1,11 @@
 {% extends "base.html" %}
 
+{% block head %}
+
+<link rel="stylesheet" href="../../static/signup.css">
+{% endblock %}
+
 {% block content %}
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="ProfilePageCSS.css">
-    <title>Login</title>
-  </head>
-  <body>
     {% with messages = get_flashed_messages() %}
         {% if messages %}
             <div class="notification is-danger">
@@ -19,30 +14,24 @@
         {% endif %}
         {% endwith %}
     <div class="container-fluid">
-        <form class="mx-auto">
+        <form class="mx-auto" method="POST">
             <h4 class="text-center">Sign Up</h4>
             <div class="mb-3">
               <label for="exampleInputEmail1" class="form-label">Email address</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+              <input type="email" class="form-control" id="email" name="email" aria-describedby="emailHelp">
               
             </div>
             <div class="mb-3">
                 <label for="exampleInputEmail1" class="form-label">Name</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                <input type="text" class="form-control" id="name" name="name" aria-describedby="emailHelp">
                 
               </div>
             <div class="mb-3">
               <label for="exampleInputPassword1" class="form-label">Password</label>
-              <input type="password" class="form-control" id="exampleInputPassword1">
+              <input type="password" class="form-control" id="password" name="password">
             </div>
             
             <button type="submit" class="btn btn-primary mt-4">Sign Up!</button>
           </form>
-
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
-  </body>
-</html>
-
 {% endblock %}
