--- a/neuro_nuggets/templates/pages/game_mode.html
+++ b/neuro_nuggets/templates/pages/game_mode.html
@@ -1,6 +1,7 @@
 {% block content %}
 
-
-
+<a class="" href="{{ url_for('play.endless') }}">Endless</a>
+<a class="" href="{{ url_for('play.endless') }}">Solo</a>
+<a class="" href="{{ url_for('play.endless') }}">Multiplayer</a>
 
 {% endblock %}
