--- a/neuro_nuggets/static/endless.css
+++ b/neuro_nuggets/static/endless.css
@@ -5,6 +5,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    padding-top: 64px;
 }
 /* Question */
 p {
@@ -51,4 +52,5 @@ button.answer_btn {
     align-items: center;
     display: inline;
     flex-wrap: wrap;
+    font-size: xx-large;
 }
