--- a/neuro_nuggets/templates/pages/profile.html
+++ b/neuro_nuggets/templates/pages/profile.html
@@ -1,6 +1,24 @@
 {% extends "base.html" %}
 
-{% block content %}
+<div class=”profile”>
+  <h1 style="text-align: center;">Kevin Macleod</h1>
+  <img src="asdasd.jpg" class="aj">
+</div>  
+<div>
+  <h1 style="text-align: center;">Score Acheived:</h1>
+  <p class="gh">3565</p>
+</div>
+
+
+<h2 style="text-align:right;">Change Name:</h2>
+<form style="text-align:right;">
+New Name:
+<input type="text">
+
+<input type="submit">
+</form>
+</body>
+</html>
 <h1 class="title">
   Welcome, {{ name }}!
 </h1>
