--- a/api/templates/base.html
+++ b/api/templates/base.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <h1 class="text-center">Agile Project</h1>
+        <h1 class="text-center">Neuro Nuggets</h1>
         {% include("_navigation.html") %}
         {% block header %}{% endblock header %}
     </header>
