--- a/api/templates/pages/login.html
+++ b/api/templates/pages/login.html
@@ -2,7 +2,7 @@
 
 {% block head %}
 
-<link rel="stylesheet" href="../../static/signup.css">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/signup.css') }}">
 {% endblock %}
 
 {% block content %}
