--- a/api/templates/pages/endless.html
+++ b/api/templates/pages/endless.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block head %}
-<link rel="stylesheet" href="../../static/endless.css">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/endless.css') }}">
 {% endblock %}
 
 {% block script %}
