--- a/api/templates/pages/signup.html
+++ b/api/templates/pages/signup.html
@@ -2,14 +2,14 @@
 
 {% block head %}
 
-<link rel="stylesheet" href="../../static/signup.css">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/signup.css') }}">
 {% endblock %}
 
 {% block content %}
     {% with messages = get_flashed_messages() %}
         {% if messages %}
             <div class="notification is-danger">
-                {{ messages[0] }}. Go to <a href="{{ url_for('login') }}">login page</a>.
+                {{ messages[0] }}. Go to <a href="{{ url_for('auth.login') }}">login page</a>.
             </div>
         {% endif %}
         {% endwith %}
