--- a/api/templates/_navigation.html
+++ b/api/templates/_navigation.html
@@ -5,7 +5,7 @@
         <a class="nav-link" href="{{ url_for('main.index') }}">Home</a>
         {% if current_user.is_authenticated %}
         <a class="nav-link" href="{{ url_for('main.profile') }}">Profile</a>
-        <a class="nav-link" href="{{ url_for('play.start_game') }}">Leaderboard</a>
+        <a class="nav-link" href="{{ url_for('main.leaderboard') }}">Leaderboard</a>
         <a class="nav-link" href="{{ url_for('play.start_game') }}">New Start Game</a>
         <a class="nav-link" href="{{ url_for('auth.logout') }}">Logout</a>
         {% endif %}
