--- a/api/templates/pages/leaderboard.html
+++ b/api/templates/pages/leaderboard.html
@@ -1,34 +1,20 @@
-<!--  -->
-<body>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/leaderboard.css') }}">
+{% extends "base.html" %}
 
-    <div class="content">
-        <nav>
-            <ol>
-                <li><a href="">Home</a></li>
-                <li><a href="">Play</a></li>
-                <li><a href="">Profile</a></li>
-                <li><a href="">Logout</a></li>
-            </ol>
-        </nav>
-            
+{% block head %}
+<link rel="stylesheet" href="{{ url_for('static', filename='css/leaderboard.css') }}">
+{% endblock %}
+
+{% block content %}
         <h1>Solo Timed Leaderboard</h1>
         <form id="form">
             <div>
                 <ol class="leaderboard">
-                    <li>playername + score</li>
-                    <li>playername + score</li>
-                    <li>playername + score</li>
-                    <li>playername + score</li>
-                    <li>playername + score</li>
-                    <li>playername + score</li>
-                    <li>playername + score</li>
-                    <li>playername + score</li>
-                    <li>playername + score</li>
-                    <li>playername + score</li>
+                    {% for s in scores %}
+                    <li>{{ s['name'] }} : {{ s['highscore'] }}</li>
+                    {% endfor %}
                 </ol>
-                <h3>Personal Best: (score)</h3>
+                <h3>Personal Best: {{ user.highscore }}</h3>
             </div>
         </form>
     </div>
-</body>
+{% endblock %}
