--- a/api/templates/pages/profile.html
+++ b/api/templates/pages/profile.html
@@ -2,7 +2,8 @@
 
 {% block content %}
 <h1 class="title">
-  Welcome, {{ name }}!
+  Welcome, {{ name }}
+  Your score is {{ score }}
 </h1>
 <form method="POST" >
   <label for="username">Enter New Username</label>
