--- a/api/templates/pages/solo.html
+++ b/api/templates/pages/solo.html
@@ -1,5 +1,10 @@
 {% extends "base.html" %}
 
+{% block head %}
+<link rel="stylesheet" href="{{ url_for('static', filename='css/endless.css') }}">
+{% endblock %}
+
+
 {% block script %}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js" integrity="sha512-q/dWJ3kcmjBLU4Qc47E4A9kTB4m3wuTY7vkFJDTZKjTs8jhyGQnaUrxa0Ytd0ssMZhbNua9hE+E7Qv1j+DyZwA==" crossorigin="anonymous"></script>
 <script type="text/javascript" charset="utf-8">
@@ -18,12 +23,26 @@
 
     var ans_list = [ans1, ans2, ans3, ans4]
 
+    var score_txt = document.getElementById("score_txt")
+    var new_score = document.getElementById("new_score")
+    var submit_score = document.getElementById("submit_score")
+    var submit_form = document.getElementById("submit_form")
+
     buttons.item(0).disabled = true
     buttons.item(1).disabled = true
     buttons.item(2).disabled = true
     buttons.item(3).disabled = true
 
     var user_input = null
+
+    var current = 0
+
+    var correct_index = null
+
+    socket.on('score', function(score) {
+        current = current + score
+        scoreboard.innerText = `Score : ${current}`
+    });
 
     function startTimer(duration, display) {
         var timer = duration, minutes, seconds;
@@ -39,6 +58,14 @@
             if (--timer < 0) {
                 clearInterval(intervalId)
                 socket.emit('timer');
+                buttons.item(0).disabled = true
+                buttons.item(1).disabled = true
+                buttons.item(2).disabled = true
+                buttons.item(3).disabled = true
+                new_score.value = current
+                score_txt.innerText = `Your score is ${current}`
+                score_txt.style.display = "block"
+                submit_form.style.display = "block"
             }
 
             buttons.item(0).disabled = false
@@ -47,11 +74,6 @@
             buttons.item(3).disabled = false
         }, 1000);
     }
-
-    socket.on('counter', function(data) {
-
-    // socket.emit('my event', {data: 'I\'m connected!'});
-    });
 
     socket.on('question', function(data) {
         console.log(data)
@@ -78,14 +100,17 @@
 
     form.addEventListener('submit', function(e) {
       e.preventDefault();
+        buttons.item(0).disabled = true
+        buttons.item(1).disabled = true
+        buttons.item(2).disabled = true
+        buttons.item(3).disabled = true
       if (user_input) {
         socket.emit('my event', user_input);
-      }
-      user_input = null
+        user_input = null
+        };
     });
-    // 
     socket.on('connect', function(data) {
-        startTimer(60, timer)
+        startTimer(10, timer)
         // socket.emit('my event', {data: 'I\'m connected!'});
     });
 
@@ -103,8 +128,7 @@
 {% endblock %}
 
 {% block content %}
-
-<div> <span id="timer"> ---- </span> </div>
+<div class="content">
 
 <p id="question_txt">Loading...</p>
 <div id="question" style="align-items: center;" class="flex-container">
@@ -114,13 +138,24 @@
         <li id="question_ans3" class="ans">Loading...</li>
         <li id="question_ans4" class="ans">Loading...</li>
     </ol>
-    <h1 id="score">Score : 0</h1>
+    <span id="timer"> ---- </span>
 </div>
 
 <form id="form">
-    <button class="answer_btn" id="btn1" type="submit" value="1">1</button>
-    <button class="answer_btn" id="btn2" type="submit" value="2">2</button>
-    <button class="answer_btn" id="btn3" type="submit" value="3">3</button>
-    <button class="answer_btn" id="btn4" type="submit" value="4">4</button>
+    <div class="buttons">
+        <button class="answer_btn" id="btn1" type="submit" value="1">1</button>
+        <button class="answer_btn" id="btn2" type="submit" value="2">2</button>
+        <button class="answer_btn" id="btn3" type="submit" value="3">3</button>
+        <button class="answer_btn" id="btn4" type="submit" value="4">4</button>
+    </div>
+</form>
+</div>
+
+<form method="POST" style="display: none;" id="submit_form">
+    <h1 id="score_txt" style="display: none; text-align: center; padding: 8px;">0</h1>
+    <input type="number" class="form-control" id="new_score" name="new_score" style="display: none;">
+    <div class="buttons">
+        <button class="answer_btn" id="score_submit" type="submit">Submit</button>
+    </div>
 </form>
 {% endblock %}
