--- a/api/templates/pages/leaderboard.html
+++ b/api/templates/pages/leaderboard.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-        <h1>Solo Timed Leaderboard</h1>
+        <h1>Leaderboard Scores</h1>
         <form id="form">
             <div>
                 <ol class="leaderboard">
