--- a/api/templates/pages/game_mode.html
+++ b/api/templates/pages/game_mode.html
@@ -20,8 +20,8 @@
             <div class="col-2 buttons-div">
                 <a href="{{ url_for('play.endless_game') }}"><div class="row justify-content-center"><img src="{{ url_for('static', filename='img/endlessbutton.png') }}" alt="endlessmode" class="button" id="endlessbutton"></div></a>
                 <a href="{{ url_for('play.solo_game') }}"><div class="row justify-content-center"><img src="{{ url_for('static', filename='img/singlebutton.png') }}" alt="singlemode" class="button" id="singlebutton"></div></a>
-                <a href="{{ url_for('play.endless_game') }}"><div class="row justify-content-center"><img src="{{ url_for('static', filename='img/multiplayerbutton.png') }}" alt="mutiplayermode" id="multiplayerbutton"></div></a>
-                <a href="{{ url_for('play.endless_game') }}"><div class="row justify-content-center"><img src="{{ url_for('static', filename='img/settingsbutton.png') }}" alt="settings" id="settingsbutton"></div>    </a>
+              <!--   <a href="{{ url_for('play.endless_game') }}"><div class="row justify-content-center"><img src="{{ url_for('static', filename='img/multiplayerbutton.png') }}" alt="mutiplayermode" id="multiplayerbutton"></div></a>-->
+              <!--   <a href="{{ url_for('play.endless_game') }}"><div class="row justify-content-center"><img src="{{ url_for('static', filename='img/settingsbutton.png') }}" alt="settings" id="settingsbutton"></div>    </a>-->
             </div>
         </div>
         <div class="col user-icon-container">
