--- a/api/templates/pages/solo.html
+++ b/api/templates/pages/solo.html
@@ -1,7 +1,10 @@
-{% extends "base.html" %}
+<!-- {% extends "base.html" %}
 
-{% block script %}
+{% block script %} -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js" integrity="sha512-q/dWJ3kcmjBLU4Qc47E4A9kTB4m3wuTY7vkFJDTZKjTs8jhyGQnaUrxa0Ytd0ssMZhbNua9hE+E7Qv1j+DyZwA==" crossorigin="anonymous"></script>
+<link href="/api/static/css/solo.css" rel="stylesheet">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script type="text/javascript" charset="utf-8">
     // User Answer Via Buttons Logic
     var socket = io();
@@ -100,27 +103,62 @@
     });
 </script>
 
-{% endblock %}
+<!-- % endblock %}
 
-{% block content %}
-
-<div> <span id="timer"> ---- </span> </div>
-
-<p id="question_txt">Loading...</p>
-<div id="question" style="align-items: center;" class="flex-container">
-    <ol>
-        <li id="question_ans1" class="ans">Loading...</li>
-        <li id="question_ans2" class="ans">Loading...</li>
-        <li id="question_ans3" class="ans">Loading...</li>
-        <li id="question_ans4" class="ans">Loading...</li>
-    </ol>
-    <h1 id="score">Score : 0</h1>
+{% block content %} -->
+<!-- arrow --> 
+<div class="row" style="width: 100%;">
+    <div class="col-2 align-self-start"><img id="arrow" src="/api/static/img/arrow.png" alt="arrow"></div>
 </div>
 
-<form id="form">
-    <button class="answer_btn" id="btn1" type="submit" value="1">1</button>
-    <button class="answer_btn" id="btn2" type="submit" value="2">2</button>
-    <button class="answer_btn" id="btn3" type="submit" value="3">3</button>
-    <button class="answer_btn" id="btn4" type="submit" value="4">4</button>
+<!-- score -->
+<div id="scorediv" class="row justify-content-center">
+    <div class="col-4">
+        <div class="row">
+            <img class="col" id="scorestar" src="/api/static/img/scorestar.png" alt="scorestar">
+            <div id="score" class="col align-self-center">666</div>
+        </div>
+    </div>    
+</div>
+<!-- question -->
+<div class="row">
+    <div></div>
+</div>
+
+
+
+<!-- question frame -->
+<div id="questionframediv" class="row"> 
+    <img id="questionframe" src="/api/static/img/questionframe.png" alt="qsframe">
+    <div id="question_txt">Are you gay?</div> 
+    
+</div>
+
+<!-- Timer -->
+<img id="timericon" src="/api/static/img/timer.png" alt="timericon">
+
+<div id="timer">
+    <p>666</p>      
+</div>
+
+<!--Choices-->
+<div id="question" class="row">
+    <div class="row justify-content-center">
+        <div id="question_ans1" class="ans col-5 align-self-end">Yes</div>
+        <div id="question_ans2" class="ans col-5 align-self-start">Ofcourse</div>
+    </div>
+    <div class="row justify-content-center">     
+        <div id="question_ans3" class="ans col-5 align-self-end">Yeah</div>
+        <div id="question_ans4" class="ans col-5 align-self-start">100%</div>
+    </div>
+   
+</div>
+
+<!--buttons-->
+<form id="form" class="row justify-content-center">
+    <div class="answer_btn col-1" id="btn1" type="submit" value="1"></div>
+    <div class="answer_btn col-1" id="btn2" type="submit" value="2"></div>
+    <div class="answer_btn col-1" id="btn3" type="submit" value="3"></div>
+    <div class="answer_btn col-1" id="btn4" type="submit" value="4"></div>
 </form>
-{% endblock %}
+<!-- {% endblock %} -->
