--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -1,34 +1,12 @@
 {% extends "base.html" %}
 
 {% block head %}
-<link href="../static/homepage.css" rel="stylesheet">
 
 {% endblock %}
 
 {% block content %}
-<div class="container-fluid">
-  <!-- Icon in the top-left corner -->
-  <div class="row ">
-      <div class="col-2 user-icon">
-          <img src="../images/usericon.png" alt="usericon">
-      </div>
-  <!-- Game logo -->    
-      <div class="col-8 game-logo">
-          <img src="../images/gamelogo.png" alt="gamelogo">
-      </div>
-      <div class="col-2">            
-      </div>  
-  </div>
-
-  <!-- Buttons -->    
-  <div class="row btn-container">
-      <div class="col-5 buttons">
-          <div class="row justify-content-center"><img src="../images/singlebutton.png" alt="singlemode" id="singlebutton"></div>
-          <div class="row justify-content-center"><img src="../images/endlessbutton.png" alt="endlessmode" id="endlessbutton"></div>
-          <div class="row justify-content-center"><img src="../images/multiplayerbutton.png" alt="mutiplayermode" id="multiplayerbutton"></div>
-          <div class="row justify-content-center"><img src="../images/settingsbutton.png" alt="settings" id="settingsbutton"></div>    
-      </div>
-  </div>
+<div>
+    <h1>Welcome to Neuro Nuggets</h1>
+    
 </div>
-  
 {% endblock %}
