--- a/api/templates/pages/profile.html
+++ b/api/templates/pages/profile.html
@@ -3,7 +3,9 @@
 {% block content %}
 <h1 class="title">
   Welcome, {{ name }}
-  Your score is {{ score }}
+</h1>
+<h1>
+  Your highscore is {{ score }}
 </h1>
 <form method="POST" >
   <label for="username">Enter New Username</label>
