fixed profile, leaderboard nav
centered the shit, tried to make the nav work

--- a/api/static/css/leaderboard.css
+++ b/api/static/css/leaderboard.css
@@ -20,7 +20,7 @@ nav {
         padding: 4px 19px;
     }
     ol {
-        padding: 25px;
+        padding: 0px 25px;
         justify-content: space-around;
     }
 }
