--- a/api/templates/pages/profile.html
+++ b/api/templates/pages/profile.html
@@ -1,10 +1,11 @@
 {% extends "base.html" %}
 
 {% block content %}
+<link rel="stylesheet" href="{{ url_for('static', filename='css/profile.css') }}">
 <h1 class="title">
   Welcome, {{ name }}
 </h1>
-<h1>
+<h1 class="highscore">
   Your highscore is {{ score }}
 </h1>
 <form method="POST" >
