--- a/api/templates/pages/signup.html
+++ b/api/templates/pages/signup.html
@@ -10,7 +10,7 @@
         <form class="mx-auto" method="POST">
           {% with messages = get_flashed_messages() %}
           {% if messages %}
-              <div class="notification is-danger">
+              <div class="notification">
                   {{ messages[0] }}</a>.
               </div>
           {% endif %}
