--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -8,8 +8,30 @@
 <div>
     <h1>Welcome to Neuro Nuggets</h1>
     <h2>We are an online trivia game with two different modes</h2>
-    <h2>Solo Mode: A timed competitive mode with a leaderboard</h2>
-    <h2>Endless Mode: An endless mode where you can play as long as you want!</h2>
 </div>
+<div class="flip-card">
+    <div class="flip-card-inner">
+      <div class="flip-card-front">
+        <h1>SOLO MODE</h1>
+        <!-- <img src="img_avatar.png" alt="Avatar" style="width:300px;height:300px;"> -->
+      </div>
+      <div class="flip-card-back">
+        <!-- <h1>SOLO MODE</h1> -->
+        <h1>A times trivia game with two different game modes</h1>
+      </div>
+    </div>
+  </div>
 
+  <div class="flip-card">
+    <div class="flip-card-inner">
+      <div class="flip-card-front">
+        <h1>ENDLESS MODE</h1>
+        <!-- <img src="img_avatar.png" alt="Avatar" style="width:300px;height:300px;"> -->
+      </div>
+      <div class="flip-card-back">
+        <!-- <h1>ENDLESS MODE</h1> -->
+        <h1>An endless mode where you can play as long as you want!</h1>
+      </div>
+    </div>
+  </div>
 {% endblock %}
