--- a/api/static/css/home.css
+++ b/api/static/css/home.css
@@ -1,5 +1,8 @@
-body{
+body {
     background-image: url("../img/homepagebackground.png");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
 }
 
 div h1 {
@@ -16,7 +19,7 @@ div h2 {
     width: 400px;
     height: 275px;
     border: 1px solid #f1f1f1;
-    perspective: 1000px; /* Remove this if you don't want the 3D effect */
+    perspective: 1000px;
   }
   
   .flip-card-inner {
@@ -38,11 +41,10 @@ div h2 {
     position: absolute;
     width: 100%;
     height: 100%;
-    -webkit-backface-visibility: hidden; /* Safari */
     backface-visibility: hidden;
   }
   
-  /* Style the front side (fallback if image is missing) */
+  /* Style the front side */
   .flip-card-front {
     background-color: transparent;
     color: black;
