--- a/api/static/css/leaderboard.css
+++ b/api/static/css/leaderboard.css
@@ -2,7 +2,9 @@
 
 body {
     background-image: url("../img/homepagebackground.png");
-    background-color: rgb(230, 211, 10);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
 }
 
 
