--- a/api/static/css/profile.css
+++ b/api/static/css/profile.css
@@ -1,3 +1,11 @@
+body {
+    background-image: url("../img/homepagebackground.png");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+}
+
+
 h1.title {
     display: flex;
     justify-content: center;
